--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ addons:
 
 after_success:
   # Create lcov report
-  - lcov --capture --directory ./CMakeFiles/CTestsExe.dir/ --output-file coverage.info
+  - lcov --capture --directory ./CMakeFiles/CTests.dir/ --output-file coverage.info
   - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter system-files
   - lcov --list coverage.info # debug info
   # Uploading report to CodeCov
